# prai-cli

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  config.toml
.github/: pull_request_template.md
src/: git.rs  lib.rs  main.rs  settings.rs
src/providers/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs  prompt.rs
