[package]
name = "prai"
version = "0.1.0"
edition = "2024"

[lib]
name = "prai"

[dependencies]
anyhow = "1.0.98"
bon = "3.6.4"
clap = { version = "4.0", features = ["derive", "env"] }
config = { version = "0.15.11", features = ["indexmap"] }
indoc = "2"
log = "0.4.27"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
