[package]
name = "prai"
version = "0.2.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/theelderbeever/prai-cli"
repository = "https://github.com/theelderbeever/prai-cli"
documentation = "https://docs.rs/prai-cli"
description = "A command-line tool that generates concise pull request descriptions from git diffs using configurable AI providers."

[lib]
name = "prai"

[dependencies]
anyhow = "1.0"
bon = "3.6"
clap = { version = "4.0", features = ["derive", "env"] }
config = { version = "0.15", features = ["indexmap"] }
indoc = "2"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
lazy_static = "1"
secrecy = { version = "0.10", features = ["serde"] }
indicatif = { version = "0.17.11", features = ["tokio"] }
rand = "0.9.1"
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4"
